--- a/superadmin/admin-pusat/create.html
+++ b/superadmin/admin-pusat/create.html
@@ -109,8 +109,8 @@
 
     <!-- Navbar -->
     <nav class="fixed top-0 z-50 w-full bg-white border-b">
-        <div class="px-3 py-3 lg:px-5">
-            <div class="flex justify-between">
+        <div class="px-3 py-3 lg:px-5 h-16 flex items-center">
+            <div class="flex justify-between items-center w-full">
                 <div class="flex items-center"><button data-drawer-toggle="sidebar"
                         class="sm:hidden p-2 rounded-lg hover:bg-gray-200"><svg class="w-6 h-6" fill="none"
                             stroke="currentColor" viewBox="0 0 24 24">
@@ -118,11 +118,12 @@
                         </svg></button><a href="../../superadmin/index.html" class="flex items-center ms-2">
                         <img src="../../assets/logo.png" alt="SIRENATA Logo" class="h-8 w-auto">
                         <span class="text-lg font-semibold ms-2" style="color: #13416B;">SIRENATA</span>
-                    </a></div><button class="flex bg-gray-800 rounded-full" data-dropdown-toggle="dropdown-user"><img
+                    </a></div>
+                <div class="relative"><button class="rounded-full p-0 overflow-hidden" data-dropdown-toggle="dropdown-user"><img
                         class="w-8 h-8 rounded-full"
                         src="https://ui-avatars.com/api/?name=Super+Admin&background=6366f1&color=fff"
                         alt="user"></button>
-                <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
+                    <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
                     id="dropdown-user">
                     <div class="px-4 py-3 border-b">
                         <p class="text-sm font-medium">Super Admin</p>
@@ -133,7 +134,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+                </div></div>
         </div>
     </nav>
 
