--- a/superadmin/index.html
+++ b/superadmin/index.html
@@ -334,9 +334,8 @@
                             <div>
                                 <h2 class="text-lg md:text-xl font-bold text-gray-900 card-title">Event Penting Terkini
                                 </h2>
-                                <p class="text-sm text-gray-500 mt-1">Monitor aktivitas sistem dan admin</p>
                             </div>
-                            <a href="#" class="text-sm text-indigo-600 hover:underline font-medium">Lihat Semua Log</a>
+                            <a href="#" class="text-sm text-indigo-600 hover:underline font-medium">Lihat Semua</a>
                         </div>
 
                         <div class="space-y-3 md:space-y-4">
