--- a/superadmin/admin-pusat/index.html
+++ b/superadmin/admin-pusat/index.html
@@ -152,6 +152,36 @@
                 flex-direction: column;
                 gap: 12px;
             }
+
+            /* Mobile button optimizations */
+            button,
+            a.flex {
+                font-size: 0.813rem !important;
+                /* 13px */
+                padding-top: 0.5rem !important;
+                /* py-2 */
+                padding-bottom: 0.5rem !important;
+                padding-left: 0.75rem !important;
+                /* px-3 */
+                padding-right: 0.75rem !important;
+            }
+
+            button svg,
+            a svg {
+                width: 1rem !important;
+                /* w-4 */
+                height: 1rem !important;
+                /* h-4 */
+                margin-right: 0.375rem !important;
+                /* mr-1.5 */
+            }
+
+            select,
+            input[type="text"],
+            input[type="search"] {
+                font-size: 0.813rem !important;
+                padding: 0.5rem 0.75rem !important;
+            }
         }
 
         @media (max-width: 480px) {
@@ -323,9 +353,6 @@
 
             <!-- Header -->
             <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-6 gap-4">
-                <div>
-                    <h1 class="text-2xl md:text-3xl font-bold text-gray-900 mb-2">Manajemen Admin Pusat</h1>
-                </div>
                 <a href="../admin-pusat/create.html"
                     class="flex items-center bg-indigo-600 text-white px-4 py-2.5 rounded-lg hover:bg-indigo-700 transition-colors shadow-sm hover:shadow-md w-full sm:w-auto justify-center">
                     <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
