--- a/portal-dashboard.html
+++ b/portal-dashboard.html
@@ -162,7 +162,7 @@
             </a>
 
             <!-- User/Peserta Dashboard -->
-            <a href="user/biasa/index.html"
+            <a href="user/index.html"
                 class="card-hover bg-white rounded-2xl p-8 border-2 border-gray-200 hover:border-indigo-500 group">
                 <div class="flex flex-col items-center text-center">
                     <div
@@ -216,5 +216,6 @@
     </footer>
 
 </body>
+
 
 </html>
