--- a/auth/register.html
+++ b/auth/register.html
@@ -358,7 +358,7 @@
 
             console.log('Registration completed:', formData);
             // Redirect to portal dashboard
-            window.location.href = '../portal-dashboard.html';
+            window.location.href = '../user/instansi.html';
         }
     </script>
 </body>
