--- a/user/instansi.html
+++ b/user/instansi.html
@@ -210,16 +210,21 @@
                         <label class="block text-sm font-medium text-gray-700 mb-2">
                             Asal Instansi <span class="text-red-500">*</span>
                         </label>
-                        <div class="flex gap-4">
+                        <div class="flex gap-3">
                             <label
-                                class="flex-1 flex items-center justify-center px-4 py-3 border-2 border-gray-300 rounded-lg cursor-pointer hover:border-indigo-500 transition-colors">
+                                class="flex-1 flex items-center justify-center px-3 py-3 border-2 border-gray-300 rounded-lg cursor-pointer hover:border-indigo-500 transition-colors">
                                 <input type="radio" name="asalInstansi" value="pusat" class="mr-2">
-                                <span class="font-medium">Pusat</span>
+                                <span class="font-medium text-sm">Pusat</span>
                             </label>
                             <label
-                                class="flex-1 flex items-center justify-center px-4 py-3 border-2 border-gray-300 rounded-lg cursor-pointer hover:border-indigo-500 transition-colors">
-                                <input type="radio" name="asalInstansi" value="daerah" class="mr-2">
-                                <span class="font-medium">Daerah</span>
+                                class="flex-1 flex items-center justify-center px-3 py-3 border-2 border-gray-300 rounded-lg cursor-pointer hover:border-indigo-500 transition-colors">
+                                <input type="radio" name="asalInstansi" value="provinsi" class="mr-2">
+                                <span class="font-medium text-sm">Provinsi</span>
+                            </label>
+                            <label
+                                class="flex-1 flex items-center justify-center px-3 py-3 border-2 border-gray-300 rounded-lg cursor-pointer hover:border-indigo-500 transition-colors">
+                                <input type="radio" name="asalInstansi" value="kabkota" class="mr-2">
+                                <span class="font-medium text-sm">Kab/Kota</span>
                             </label>
                         </div>
                     </div>
@@ -234,7 +239,7 @@
                         </select>
                     </div>
 
-                    <!-- Provinsi (Show if Daerah) -->
+                    <!-- Provinsi (Show if Provinsi or Kab/Kota) -->
                     <div id="provinsiSection" class="hidden">
                         <label for="provinsi" class="block text-sm font-medium text-gray-700 mb-2">
                             Provinsi <span class="text-red-500">*</span>
@@ -244,7 +249,7 @@
                         </select>
                     </div>
 
-                    <!-- Kab/Kota (Show after Provinsi) -->
+                    <!-- Kab/Kota (Show only if Kab/Kota selected) -->
                     <div id="kabkotaSection" class="hidden">
                         <label for="kabkota" class="block text-sm font-medium text-gray-700 mb-2">
                             Kabupaten/Kota <span class="text-red-500">*</span>
@@ -254,14 +259,33 @@
                         </select>
                     </div>
 
-                    <!-- Instansi Daerah (Show after Kab/Kota) -->
-                    <div id="instansiDaerahSection" class="hidden">
-                        <label for="instansiDaerah" class="block text-sm font-medium text-gray-700 mb-2">
+                    <!-- Instansi (Show for Provinsi and Kab/Kota) -->
+                    <div id="instansiSection" class="hidden">
+                        <label for="instansi" class="block text-sm font-medium text-gray-700 mb-2">
                             Instansi <span class="text-red-500">*</span>
                         </label>
-                        <select id="instansiDaerah" class="w-full">
+                        <select id="instansi" class="w-full">
                             <option value="">Pilih Instansi</option>
                         </select>
+                        <p class="mt-2 text-xs text-gray-500 italic">💡 Pilih Lainnya jika Instansi Anda tidak ada</p>
+                    </div>
+
+                    <!-- Custom Instansi Input (Show when "Lainnya" is selected) -->
+                    <div id="customInstansiSection" class="hidden">
+                        <label for="customInstansi" class="block text-sm font-medium text-gray-700 mb-2">
+                            Nama Instansi <span class="text-red-500">*</span>
+                        </label>
+                        <input type="text" id="customInstansi" placeholder="Masukkan nama instansi"
+                            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+                        <div class="mt-2 p-3 bg-blue-50 border border-blue-200 rounded-lg">
+                            <p class="text-xs text-blue-800 font-medium mb-1">📝 Cara Penulisan yang Tepat:</p>
+                            <ul class="text-xs text-blue-700 space-y-1 ml-4 list-disc">
+                                <li>Gunakan huruf kapital pada awal setiap kata (Title Case)</li>
+                                <li>Contoh: <span class="font-semibold">"Dinas Pendidikan dan Kebudayaan"</span></li>
+                                <li>Hindari singkatan kecuali nama resmi menggunakannya</li>
+                                <li>Pastikan ejaan sesuai dengan nama resmi instansi</li>
+                            </ul>
+                        </div>
                     </div>
 
                     <!-- Unit Kerja -->
@@ -358,7 +382,7 @@
         });
 
         // Initialize Select2
-        $('#kementerian, #provinsi, #kabkota, #instansiDaerah').select2({
+        $('#kementerian, #provinsi, #kabkota, #instansi').select2({
             placeholder: function () {
                 return $(this).find('option:first').text();
             },
@@ -371,12 +395,14 @@
             const value = $(this).val();
 
             // Reset all sections
-            $('#kementerianSection, #provinsiSection, #kabkotaSection, #instansiDaerahSection, #unitKerjaSection').addClass('hidden');
-            $('#kementerian, #provinsi, #kabkota, #instansiDaerah, #unitKerja').val('').trigger('change');
+            $('#kementerianSection, #provinsiSection, #kabkotaSection, #instansiSection, #customInstansiSection, #unitKerjaSection').addClass('hidden');
+            $('#kementerian, #provinsi, #kabkota, #instansi, #customInstansi, #unitKerja').val('').trigger('change');
 
             if (value === 'pusat') {
                 $('#kementerianSection, #unitKerjaSection').removeClass('hidden');
-            } else if (value === 'daerah') {
+            } else if (value === 'provinsi') {
+                $('#provinsiSection').removeClass('hidden');
+            } else if (value === 'kabkota') {
                 $('#provinsiSection').removeClass('hidden');
             }
         });
@@ -384,48 +410,82 @@
         // Handle Provinsi Selection
         $('#provinsi').on('change', function () {
             const provinsi = $(this).val();
+            const asalInstansi = $('input[name="asalInstansi"]:checked').val();
+
             if (provinsi) {
-                // Populate dummy Kab/Kota data
-                $('#kabkota').empty().append(new Option('Pilih Kabupaten/Kota', ''));
-                const dummyKabKota = [
-                    'Kabupaten ' + provinsi,
-                    'Kota ' + provinsi,
-                    'Kabupaten Utara',
-                    'Kabupaten Selatan'
-                ];
-                dummyKabKota.forEach(k => {
-                    $('#kabkota').append(new Option(k, k));
-                });
-                $('#kabkotaSection').removeClass('hidden');
-                $('#instansiDaerahSection, #unitKerjaSection').addClass('hidden');
+                if (asalInstansi === 'kabkota') {
+                    // Populate dummy Kab/Kota data
+                    $('#kabkota').empty().append(new Option('Pilih Kabupaten/Kota', ''));
+                    const dummyKabKota = [
+                        'Kabupaten ' + provinsi,
+                        'Kota ' + provinsi,
+                        'Kabupaten Utara',
+                        'Kabupaten Selatan'
+                    ];
+                    dummyKabKota.forEach(k => {
+                        $('#kabkota').append(new Option(k, k));
+                    });
+                    $('#kabkotaSection').removeClass('hidden');
+                    $('#instansiSection, #customInstansiSection, #unitKerjaSection').addClass('hidden');
+                } else if (asalInstansi === 'provinsi') {
+                    // For provinsi, show instansi directly
+                    populateInstansi();
+                    $('#instansiSection').removeClass('hidden');
+                    $('#kabkotaSection, #customInstansiSection').addClass('hidden');
+                }
             }
         });
+
+        // Function to populate Instansi dropdown
+        function populateInstansi() {
+            $('#instansi').empty().append(new Option('Pilih Instansi', ''));
+            const dummyInstansi = [
+                'Dinas Pendidikan',
+                'Dinas Kesehatan',
+                'Dinas Pekerjaan Umum',
+                'Dinas Perhubungan',
+                'Dinas Sosial',
+                'Badan Kepegawaian Daerah',
+                'Dinas Tenaga Kerja',
+                'Dinas Perindustrian dan Perdagangan'
+            ];
+            dummyInstansi.forEach(i => {
+                $('#instansi').append(new Option(i, i));
+            });
+            // Add "Lainnya" option
+            $('#instansi').append(new Option('Lainnya (Instansi tidak ada dalam daftar)', 'lainnya'));
+        }
 
         // Handle Kab/Kota Selection
         $('#kabkota').on('change', function () {
             const kabkota = $(this).val();
             if (kabkota) {
-                // Populate dummy Instansi data
-                $('#instansiDaerah').empty().append(new Option('Pilih Instansi', ''));
-                const dummyInstansi = [
-                    'Dinas Pendidikan',
-                    'Dinas Kesehatan',
-                    'Dinas Pekerjaan Umum',
-                    'Dinas Perhubungan',
-                    'Dinas Sosial',
-                    'Badan Kepegawaian Daerah'
-                ];
-                dummyInstansi.forEach(i => {
-                    $('#instansiDaerah').append(new Option(i, i));
-                });
-                $('#instansiDaerahSection').removeClass('hidden');
+                populateInstansi();
+                $('#instansiSection').removeClass('hidden');
+                $('#customInstansiSection, #unitKerjaSection').addClass('hidden');
             }
         });
 
-        // Handle Instansi Daerah Selection
-        $('#instansiDaerah').on('change', function () {
-            if ($(this).val()) {
+        // Handle Instansi Selection
+        $('#instansi').on('change', function () {
+            const value = $(this).val();
+            if (value === 'lainnya') {
+                $('#customInstansiSection').removeClass('hidden');
+                $('#unitKerjaSection').addClass('hidden');
+            } else if (value) {
+                $('#customInstansiSection').addClass('hidden');
                 $('#unitKerjaSection').removeClass('hidden');
+            } else {
+                $('#customInstansiSection, #unitKerjaSection').addClass('hidden');
+            }
+        });
+
+        // Handle Custom Instansi Input
+        $('#customInstansi').on('input', function () {
+            if ($(this).val().trim()) {
+                $('#unitKerjaSection').removeClass('hidden');
+            } else {
+                $('#unitKerjaSection').addClass('hidden');
             }
         });
 
@@ -452,14 +512,48 @@
                     alert('Pilih Kementerian/Lembaga!');
                     return;
                 }
-            } else {
+            } else if (asalInstansi === 'provinsi') {
+                const provinsi = $('#provinsi').val();
+                const instansi = $('#instansi').val();
+
+                if (!provinsi) {
+                    alert('Pilih Provinsi!');
+                    return;
+                }
+                if (!instansi) {
+                    alert('Pilih Instansi!');
+                    return;
+                }
+                if (instansi === 'lainnya') {
+                    const customInstansi = $('#customInstansi').val().trim();
+                    if (!customInstansi) {
+                        alert('Masukkan nama instansi!');
+                        return;
+                    }
+                }
+            } else if (asalInstansi === 'kabkota') {
                 const provinsi = $('#provinsi').val();
                 const kabkota = $('#kabkota').val();
-                const instansi = $('#instansiDaerah').val();
+                const instansi = $('#instansi').val();
 
-                if (!provinsi || !kabkota || !instansi) {
-                    alert('Lengkapi semua data daerah!');
+                if (!provinsi) {
+                    alert('Pilih Provinsi!');
                     return;
+                }
+                if (!kabkota) {
+                    alert('Pilih Kabupaten/Kota!');
+                    return;
+                }
+                if (!instansi) {
+                    alert('Pilih Instansi!');
+                    return;
+                }
+                if (instansi === 'lainnya') {
+                    const customInstansi = $('#customInstansi').val().trim();
+                    if (!customInstansi) {
+                        alert('Masukkan nama instansi!');
+                        return;
+                    }
                 }
             }
 
