--- a/superadmin/user/profile.html
+++ b/superadmin/user/profile.html
@@ -28,22 +28,23 @@
                         <img src="../../assets/logo.png" alt="SIRENATA Logo" class="h-8 w-auto">
                         <span class="text-lg font-semibold ms-2" style="color: #13416B;">SIRENATA</span>
                     </a></div>
-                <div class="relative"><button class="rounded-full p-0 overflow-hidden" data-dropdown-toggle="dropdown-user"><img
-                        class="w-8 h-8 rounded-full"
-                        src="https://ui-avatars.com/api/?name=Admin+Super&background=6366f1&color=fff"
-                        alt="user"></button>
+                <div class="relative"><button class="rounded-full p-0 overflow-hidden"
+                        data-dropdown-toggle="dropdown-user"><img class="w-8 h-8 rounded-full"
+                            src="https://ui-avatars.com/api/?name=Super+Admin&background=6366f1&color=fff"
+                            alt="user"></button>
                     <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
-                    id="dropdown-user">
-                    <div class="px-4 py-3 border-b">
-                        <p class="text-sm font-medium">Admin Super</p>
+                        id="dropdown-user">
+                        <div class="px-4 py-3 border-b">
+                            <p class="text-sm font-medium">Super Admin</p>
+                        </div>
+                        <ul class="p-2 text-sm">
+                            <!-- Menu Profile -->
+                            <li><a href="./profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a></li>
+                            <li><a href="/auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a></li>
+                        </ul>
                     </div>
-                    <ul class="p-2 text-sm">
-                        <!-- Menu Profile -->
-                        <li><a href="./profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a></li>
-                        <li><a href="/auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a></li>
-                    </ul>
                 </div>
-                </div></div>
+            </div>
         </div>
     </nav>
 
@@ -140,7 +141,7 @@
                     <!-- Profile Picture -->
                     <div class="absolute -bottom-20 left-1/2 transform -translate-x-1/2">
                         <div class="relative">
-                            <img src="https://ui-avatars.com/api/?name=AS&background=6366f1&color=fff&size=160"
+                            <img src="https://ui-avatars.com/api/?name=Super+Admin&background=6366f1&color=fff&size=160"
                                 alt="Profile" class="w-40 h-40 rounded-full border-4 border-white shadow-xl">
                             <div
                                 class="absolute bottom-3 right-3 w-7 h-7 bg-green-500 border-2 border-white rounded-full">
@@ -159,7 +160,7 @@
                             <label for="nama" class="block text-sm font-semibold text-gray-700 mb-2">
                                 Nama Lengkap
                             </label>
-                            <input type="text" id="nama" value="Admin Super" disabled readonly
+                            <input type="text" id="nama" value="Super Admin" disabled readonly
                                 class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
                         </div>
 
