--- a/kab-kota/report/index.html
+++ b/kab-kota/report/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
@@ -154,12 +154,12 @@
                         <span class="text-lg font-semibold ms-2" style="color: #13416B;">SIRENATA</span>
                     </a></div><button class="rounded-full p-0 overflow-hidden" data-dropdown-toggle="dropdown-user"><img
                         class="w-8 h-8 rounded-full"
-                        src="https://ui-avatars.com/api/?name=Budi+Santoso&background=6366f1&color=fff"
+                        src="https://ui-avatars.com/api/?name=Admin+Kab%2FKota&background=6366f1&color=fff"
                         alt="user"></button>
                 <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
                     id="dropdown-user">
                     <div class="px-4 py-3 border-b">
-                        <p class="text-sm font-medium">Budi Santoso</p>
+                        <p class="text-sm font-medium">Admin Kab/Kota</p>
                     </div>
                     <ul class="p-2 text-sm">
                         <!-- Menu Profil -->
@@ -396,7 +396,7 @@
         const courseData = [
             { nama: 'Ahmad Wijaya', kursus: 'Dasar-Dasar Ketenagakerjaan', instansi: 'PT Maju Bersama', status: 'Selesai' },
             { nama: 'Siti Nurhaliza', kursus: 'Hukum Ketenagakerjaan', instansi: 'Dinas Tenaga Kerja Jakarta', status: 'Selesai' },
-            { nama: 'Budi Santoso', kursus: 'K3 (Kesehatan dan Keselamatan Kerja)', instansi: 'PT Karya Sejahtera', status: 'Selesai' },
+            { nama: 'Admin Kab/Kota', kursus: 'K3 (Kesehatan dan Keselamatan Kerja)', instansi: 'PT Karya Sejahtera', status: 'Selesai' },
             { nama: 'Dewi Lestari', kursus: 'Manajemen SDM', instansi: 'PT Indah Pratama', status: 'Selesai' },
             { nama: 'Rudi Hartono', kursus: 'Hubungan Industrial', instansi: 'PT Cahaya Abadi', status: 'Selesai' },
             { nama: 'Maya Sari', kursus: 'Dasar-Dasar Ketenagakerjaan', instansi: 'Dinas Tenaga Kerja Bandung', status: 'Selesai' },
