--- a/pusat/susun/index.html
+++ b/pusat/susun/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
@@ -277,12 +277,12 @@
                 <div class="relative">
                     <button class="rounded-full p-0 overflow-hidden" data-dropdown-toggle="dropdown-user">
                         <img class="w-8 h-8 rounded-full"
-                            src="https://ui-avatars.com/api/?name=Budi+Santoso&background=6366f1&color=fff" alt="user">
+                            src="https://ui-avatars.com/api/?name=Admin+Pusat&background=6366f1&color=fff" alt="user">
                     </button>
                     <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
                         id="dropdown-user">
                         <div class="px-4 py-3 border-b">
-                            <p class="text-sm font-medium">Budi Santoso</p>
+                            <p class="text-sm font-medium">Admin Pusat</p>
                         </div>
                         <ul class="p-2 text-sm">
                             <li><a href="./user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a>
@@ -586,7 +586,7 @@
             { name: 'RTKN 2015-2019', period: '2015-2019', leader: 'Prof. Dewi Lestari', created: '2014-03-10', completed: '2019-12-31', duration: '60 bulan' },
             { name: 'RTKN 2010-2014', period: '2010-2014', leader: 'Dr. Rina Kusuma', created: '2009-04-05', completed: '2014-12-31', duration: '60 bulan' },
             { name: 'RTKN 2005-2009', period: '2005-2009', leader: 'Ir. Bambang Suryanto', created: '2004-05-01', completed: '2009-12-31', duration: '60 bulan' },
-            { name: 'RTKN 2000-2004', period: '2000-2004', leader: 'Drs. Budi Santoso', created: '1999-06-01', completed: '2004-12-31', duration: '60 bulan' }
+            { name: 'RTKN 2000-2004', period: '2000-2004', leader: 'Drs. Admin Pusat', created: '1999-06-01', completed: '2004-12-31', duration: '60 bulan' }
         ];
 
         // Transform data for DataTable
