--- a/kab-kota/susun/create.html
+++ b/kab-kota/susun/create.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
@@ -71,12 +71,12 @@
                         <span class="text-lg font-semibold ms-2" style="color: #13416B;">SIRENATA</span>
                     </a></div><button class="rounded-full p-0 overflow-hidden" data-dropdown-toggle="dropdown-user"><img
                         class="w-8 h-8 rounded-full"
-                        src="https://ui-avatars.com/api/?name=Budi+Santoso&background=6366f1&color=fff"
+                        src="https://ui-avatars.com/api/?name=Admin+Kab%2FKota&background=6366f1&color=fff"
                         alt="user"></button>
                 <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
                     id="dropdown-user">
                     <div class="px-4 py-3 border-b">
-                        <p class="text-sm font-medium">Budi Santoso</p>
+                        <p class="text-sm font-medium">Admin Kab/Kota</p>
                     </div>
                     <ul class="p-2 text-sm">
                         <!-- Menu Profil -->
@@ -252,7 +252,7 @@
                             <option value="">Pilih Ketua Tim</option>
                             <option value="Dr. Ahmad Wijaya">Dr. Ahmad Wijaya</option>
                             <option value="Ir. Siti Nurhaliza">Ir. Siti Nurhaliza</option>
-                            <option value="Budi Santoso, S.E.">Budi Santoso, S.E.</option>
+                            <option value="Admin Kab/Kota, S.E.">Admin Kab/Kota, S.E.</option>
                             <option value="Dr. Rina Kusuma">Dr. Rina Kusuma</option>
                             <option value="dr. Hendra Pratama">dr. Hendra Pratama</option>
                             <option value="Prof. Dewi Lestari">Prof. Dewi Lestari</option>
@@ -279,7 +279,7 @@
                             style="min-height: 400px;">
                             <option value="Dr. Ahmad Wijaya">Dr. Ahmad Wijaya</option>
                             <option value="Ir. Siti Nurhaliza">Ir. Siti Nurhaliza</option>
-                            <option value="Budi Santoso, S.E.">Budi Santoso, S.E.</option>
+                            <option value="Admin Kab/Kota, S.E.">Admin Kab/Kota, S.E.</option>
                             <option value="Dr. Rina Kusuma">Dr. Rina Kusuma</option>
                             <option value="dr. Hendra Pratama">dr. Hendra Pratama</option>
                             <option value="Prof. Dewi Lestari">Prof. Dewi Lestari</option>
