--- a/provinsi/user/profile.html
+++ b/provinsi/user/profile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
@@ -29,12 +29,12 @@
                         <span class="text-lg font-semibold ms-2" style="color: #13416B;">SIRENATA</span>
                     </a></div><button class="rounded-full p-0 overflow-hidden" data-dropdown-toggle="dropdown-user"><img
                         class="w-8 h-8 rounded-full"
-                        src="https://ui-avatars.com/api/?name=Budi+Santoso&background=6366f1&color=fff"
+                        src="https://ui-avatars.com/api/?name=Provinsi+Admin&background=6366f1&color=fff"
                         alt="user"></button>
                 <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
                     id="dropdown-user">
                     <div class="px-4 py-3 border-b">
-                        <p class="text-sm font-medium">Budi Santoso</p>
+                        <p class="text-sm font-medium">Provinsi Admin</p>
                     </div>
                     <ul class="p-2 text-sm">
                         <!-- Menu Profile -->
@@ -182,7 +182,7 @@
                     <!-- Profile Picture -->
                     <div class="absolute -bottom-20 left-1/2 transform -translate-x-1/2">
                         <div class="relative">
-                            <img src="https://ui-avatars.com/api/?name=BS&background=6366f1&color=fff&size=160"
+                            <img src="https://ui-avatars.com/api/?name=Provinsi+Admin&background=6366f1&color=fff&size=160"
                                 alt="Profile" class="w-40 h-40 rounded-full border-4 border-white shadow-xl">
                             <div
                                 class="absolute bottom-3 right-3 w-7 h-7 bg-green-500 border-2 border-white rounded-full">
@@ -201,7 +201,7 @@
                             <label for="nama" class="block text-sm font-semibold text-gray-700 mb-2">
                                 Nama Lengkap
                             </label>
-                            <input type="text" id="nama" value="Budi Santoso" disabled readonly
+                            <input type="text" id="nama" value="Provinsi Admin" disabled readonly
                                 class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
                         </div>
 
