--- a/pusat/notifikasi/index.html
+++ b/pusat/notifikasi/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
@@ -64,12 +64,12 @@
                 <div class="relative">
                     <button class="rounded-full p-0 overflow-hidden" data-dropdown-toggle="dropdown-user">
                         <img class="w-8 h-8 rounded-full"
-                            src="https://ui-avatars.com/api/?name=Budi+Santoso&background=6366f1&color=fff" alt="user">
+                            src="https://ui-avatars.com/api/?name=Admin+Pusat&background=6366f1&color=fff" alt="user">
                     </button>
                     <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
                         id="dropdown-user">
                         <div class="px-4 py-3 border-b">
-                            <p class="text-sm font-medium">Budi Santoso</p>
+                            <p class="text-sm font-medium">Admin Pusat</p>
                         </div>
                         <ul class="p-2 text-sm">
                             <li><a href="../user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a>
