--- a/pusat/rekapitulasi/kab-kota.html
+++ b/pusat/rekapitulasi/kab-kota.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
@@ -154,12 +154,12 @@
                         <span class="text-lg font-semibold ms-2" style="color: #13416B;">SIRENATA</span>
                     </a></div><button class="rounded-full p-0 overflow-hidden" data-dropdown-toggle="dropdown-user"><img
                         class="w-8 h-8 rounded-full"
-                        src="https://ui-avatars.com/api/?name=Budi+Santoso&background=6366f1&color=fff"
+                        src="https://ui-avatars.com/api/?name=Admin+Pusat&background=6366f1&color=fff"
                         alt="user"></button>
                 <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
                     id="dropdown-user">
                     <div class="px-4 py-3 border-b">
-                        <p class="text-sm font-medium">Budi Santoso</p>
+                        <p class="text-sm font-medium">Admin Pusat</p>
                     </div>
                     <ul class="p-2 text-sm">
                         <!-- Menu Profile -->
@@ -415,7 +415,7 @@
         const courseData = [
             { nama: 'Ahmad Wijaya', kursus: 'Perencanaan Tenaga Kerja Makro', instansi: 'PT Maju Bersama Jakarta', status: 'Selesai' },
             { nama: 'Siti Nurhaliza', kursus: 'Indeks Pembangunan Ketenagakerjaan', instansi: 'Dinas Tenaga Kerja Jakarta', status: 'Selesai' },
-            { nama: 'Budi Santoso', kursus: 'Perencanaan Tenaga Kerja Makro', instansi: 'PT Karya Sejahtera', status: 'Selesai' },
+            { nama: 'Admin Pusat', kursus: 'Perencanaan Tenaga Kerja Makro', instansi: 'PT Karya Sejahtera', status: 'Selesai' },
             { nama: 'Dewi Lestari', kursus: 'PTK Makro (Advanced)', instansi: 'PT Indah Pratama', status: 'Selesai' },
             { nama: 'Rudi Hartono', kursus: 'Indeks Pembangunan Ketenagakerjaan', instansi: 'PT Cahaya Abadi', status: 'Selesai' },
             { nama: 'Maya Sari', kursus: 'Perencanaan Tenaga Kerja Makro', instansi: 'Dinas Koperasi Jakarta', status: 'Selesai' },
